fixed the focus visible input outlines that went missing when i changed the normal outline color

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -54,7 +54,7 @@ img {
   max-width: 100%;
 }
 
-button {
+button:not(form button) {
   cursor: pointer;
   padding: 0.5rem 1rem 0.6rem;
   border-radius: 10px;
@@ -346,9 +346,9 @@ main {
       input,
       select,
       textarea {
+        outline: 1px solid currentColor;
         margin-block: 0.5rem 1rem;
         border: none;
-        outline: 1px solid currentColor;
         text-align: center;
         padding: 0.25rem 0.5rem 0.35rem;
         border-radius: 10px;
@@ -358,6 +358,17 @@ main {
         field-sizing: content;
         min-width: 75%;
         max-width: 800px;
+      }
+
+      input:focus-visible,
+      textarea:focus-visible,
+      select:focus-visible {
+        outline: 3px solid light-dark(black, white) !important;
+        outline-offset: 3px;
+      }
+      input[type="radio"]:focus-visible {
+        outline: 1px solid light-dark(black, white) !important;
+        outline-offset: 3px;
       }
 
       select {
@@ -412,18 +423,21 @@ main {
       width: 250px;
       margin: 1rem auto;
       padding: 0.75rem 1rem 0.85rem;
-    }
+      cursor: pointer;
+      border-radius: 10px;
+      border: none;
+      outline: 1px solid currentColor;
+      box-shadow: 0px 2px 8px currentColor;
 
-    button:focus-visible,
-    input:focus-visible,
-    textarea:focus-visible,
-    select:focus-visible,
-    input[type="radio"]:focus-visible {
-      outline: 1px solid light-dark(black, white);
-      outline-offset: 3px;
-    }
-    button:focus-visible {
-      outline-offset: 7px;
+      &:focus-visible {
+        outline: 3px solid light-dark(black, white) !important;
+        outline-offset: 7px;
+      }
+
+      &:hover {
+        scale: 1.05;
+        box-shadow: 0px 1px 6px currentColor;
+      }
     }
   }
   .active-form {
